--- a/DongGia-master/src/components/_footer/index.pug
+++ b/DongGia-master/src/components/_footer/index.pug
@@ -1,7 +1,7 @@
 footer
-	.container
-		.row.no-gutters.top
-			.col-lg-4.col-sm-6.address
+	.bs4-container
+		.bs4-row.no-gutters.top
+			.bs4-col-lg-4.bs4-col-sm-6.address
 				h2.module-title Contact Info
 				p 54 Nguyen Cu, Thao Dien Ward, District 2, Ho Chi Minh city, Vietnam
 				br
@@ -10,7 +10,7 @@ footer
 				p Open: 9.00am - 6.00pm (Monday - Friday)
 				p 
 					a(href="mailto:info@dong-gia.com") info@dong-gia.com
-			.col-lg.col-sm-6.nav
+			.bs4-col-lg.bs4-col-sm-6.nav
 				h2.module-title Customer Service
 				nav
 					a(href="#") Care Info
@@ -19,7 +19,7 @@ footer
 					a(href="#") Privacy Policy
 					a(href="#") FAQ
 					a(href="#") Contact
-			.col-lg.col-sm-6.nav
+			.bs4-col-lg.bs4-col-sm-6.nav
 				h2.module-title Contact
 				nav
 					a(href="#") Head Office & Showroom
@@ -27,7 +27,7 @@ footer
 					a(href="#") Hanoi Store 
 					a(href="#") Local Delivery
 					a(href="#") Worldwide Delivery
-			.col-lg-3.col-sm-6
+			.bs4-col-lg-3.bs4-col-sm-6
 				.receive-news
 					.Module
 						.subscribe
@@ -50,8 +50,8 @@ footer
 									span.fab.fa-instagram
 								a(href="#")
 									span.fab.fa-youtube
-		.row.copyright
-			.col
+		.bs4-row.copyright
+			.bs4-col
 				p 
 					span @ 2019 DONG GIA ENTERPRISE - CERAMICS & DÉCO OBJECTS.
 					span ALL RIGHT RESERVED. DESIGN BY 
