--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -1,6 +1,6 @@
 footer
 	background: darken(white,8%)
-	.container
+	.bs4-container
 		position: relative
 	.top
 		padding-top: 48px
@@ -87,7 +87,7 @@ footer
 				font-size: 13px
 				span
 					display: block
-		.container
+		.bs4-container
 			max-width: 100%
 		.address, .nav
 			margin-bottom: 28px
