--- a/DongGia-master/src/components/_header/index.sass
+++ b/DongGia-master/src/components/_header/index.sass
@@ -221,7 +221,7 @@ header
 					font-size: 13px
 	@media (max-width: 991.9px)
 		padding-bottom: 10px
-		.container
+		.bs4-container
 			max-width: 100%
 		.backdrop
 			display: none
