--- a/DongGia-master/src/components/gallery/index.pug
+++ b/DongGia-master/src/components/gallery/index.pug
@@ -1,10 +1,10 @@
 .gallery-nav
-	.container
+	.bs4-container
 		nav
 			a.active(href="#") Workshop
 			a(href="#") Product Concept
 .gallery
-	.container
+	.bs4-container
 		h2.main-title Product Concept
 		.grid
 			.grid-sizer
