--- a/DongGia-master/src/components/home/index.pug
+++ b/DongGia-master/src/components/home/index.pug
@@ -1,83 +1,83 @@
-section.banner-home
+section.mun-e-magazine-banner
 	img(src="./img/home/banner.jpg", alt="")
-section.home
-	.container
-		.row
-			.col-md-5
+section.mun-e-magazine
+	.bs4-container
+		.bs4-row
+			.bs4-col-md-5
 				hr
 				p Da sạch là tiền đề của da khỏe và da khỏe là gốc rễ của da đẹp. Vì vậy, bạn có thể không có serum, không có kem dưỡng nhưng không thể không có sữa rửa mặt. Công dụng của sản phẩm này là làm sạch bụi bẩn, tạp chất và dầu thừa trên bề mặt da. Ngoài ra, nếu chọn các loại sữa rửa mặt có chứa Salicylic acid thì bạn còn giúp da được làm sạch sâu trong lỗ chân lông, kiểm soát dầu thừa và điều trị - ngăn ngừa mụn. 
-			.col-md-7
+			.bs4-col-md-7
 				.boximg
 					img(src="./img/home/heading_1.png", alt="")
-		.row
-			.col-md-8
+		.bs4-row
+			.bs4-col-md-8
 				p Bởi lẽ, Salicylic acid là hoạt chất thuộc nhóm BHA và có khả năng tan trong dầu. Vì vậy các bít tắc trong lỗ chân lông do dầu thừa sẽ được Salicylic acid giải quyết dễ dàng. Theo nhiều nghiên cứu, hoạt chất này còn giúp giảm viêm sưng, tấy đỏ do mụn gây ra. Clarifying Cleanser của Murad là sản phẩm tiêu biểu với 1.5% Salicylic acid. Ngoài ra, gel rửa mặt này còn chứa muối bạc Citrate và trà xanh vừa giúp da kháng viêm vừa ức chế sự hoạt động của khuẩn mụn.
 				.boximg
 					img(src="./img/home/heading_2.jpg", alt="")
-			.col-md-4
+			.bs4-col-md-4
 				.boximg.flex-end
 					img(src="./img/home/item_1.png", alt="")
-		.row
-			.col-md-5
+		.bs4-row
+			.bs4-col-md-5
 				.boximg
 					img(src="./img/home/picture-1.jpg", alt="")
-			.col-md-7
+			.bs4-col-md-7
 				p Thực ra, nặn mụn là phương pháp xử lý viêm tại chỗ một cách nhanh chóng. Có thể bạn sẽ nghe các bác sĩ da liễu hay chuyên gia khuyên bạn nặn mụn. Tuy nhiên, việc đó chỉ đúng khi bạn thực hiện bởi các bác sĩ, chuyên viên có tay nghề và kinh nghiệm. Bạn không nên tự ý nặn mụn vì nặn mụn không đúng cách hoặc sử dụng các dụng cụ chưa được tiệt trùng sẽ lây lan vi khuẩn - làm trầm trọng thêm vấn đề viêm, phá vỡ cấu trúc da và để lại sẹo.
 					br
 					| Nếu chỉ nổi vài nốt mụn, bạn không cần thiết phải đi nặn mụn. Thay vào đó, bạn nên sử dụng các loại gel chấm mụn cấp tốc để xử lý. Cách sử dụng rất đơn giản, chỉ cần chấm sản phẩm lên đầu nốt mụn. Các hoạt chất trong gel chấm mụn sẽ làm sạch lỗ chân lông, khô nhân mụn và cồi mụn sẽ tự rơi ra khỏi da. Trong số các sản phẩm trị mụn cấp tốc thì có lẽ có hiệu quả nhanh nhất chỉ có thể là 
 					strong Rapid Relief Acne Spot Treatment của Murad
 					|  - trị mụn trong 4 giờ.
-		.row
-			.col-md-8
+		.bs4-row
+			.bs4-col-md-8
 				h3 Nặn mụn không đúng cách làm lây lan vi khuẩn,phá vỡ cấu trúc da và để lại sẹo
 				p Sở dĩ làm được điều đó là nhờ hoạt chất Salicylic acid  2% dạng nang nén độc quyền của hãng. Nếu như Salicylic acid được biết đến khả năng kháng viêm, làm sạch lỗ chân lông và tiêu nhân mụn thì ở thể nang nén hoạt chất này vươn lên tầm cao mới. Cụ thể là các phân tử Salicylic acid bao bọc lấy các tiểu phân tử Salicylic acid có kích thước nhỏ hơn để tạo thành cấu trúc nhiều lớp. Nhờ cấu trúc nang nén nhiều lớp nên mỗi 2 giờ các phân tử vỡ tan và phóng thích ra Salicylic acid để điều trị các nốt mụn đang sưng viêm. Điểm hay của cấu trúc nan nén có trong Rapid Relief Acne Spot Treatment, kể cả khi bạn rửa mặt đi hoặc không còn cảm giác gì trên da thì các hoạt chất vẫn đang âm thầm hoạt động, và các nốt mụn viêm biến mất chỉ sau 4 giờ.
 					br
 					| Ngoài ra, Rapid Relief Acne Spot Treatment có kết cấu không màu thấm cực nhanh trên da. Vì vậy bạn có thể dùng ban ngày dưới lớp trang điểm, hoặc sản phẩm sẽ không trây ra ga gối vào ban đêm. 
-			.col-md-4
+			.bs4-col-md-4
 				.boximg.flex-end
 					img(src="./img/home/item_2.jpg", alt="")
-		.row
-			.col-md-8
+		.bs4-row
+			.bs4-col-md-8
 				figure
 					.boximg
 						img(src="./img/home/heading_5.jpg", alt="")
 					figcaption
 						p Thời tiết oi ả như Việt Nam sẽ khiến những người da dầu tiết thêm nhiều dầu. Đây là điều kiện thuận lợi để mụn xuất hiện. Thay vì rửa mặt quá nhiều khiến hàng rào bảo vệ suy yếu, hay sử dụng giấy thấm dầu thường xuyên làm da mất độ ẩm… thì bạn nên sử dụng các loại kem dưỡng có chức năng kiềm dầu. Kem dưỡng không chứa dầu chưa hẳn là sự lựa chọn tốt. Mặc dù các sản phẩm đó không mang thêm dầu, nhưng không ức chế được lượng bã nhờn và bề mặt da vẫn bị bóng lưỡng chỉ sau vài giờ. 
-			.col-md-4
+			.bs4-col-md-4
 				.boximg.flex-end
 					img(src="./img/home/item_3.jpg", alt="")
-		.row
-			.col-md-5
+		.bs4-row
+			.bs4-col-md-5
 				.boximg
 					img(src="./img/home/picture-4.jpg", alt="")
-			.col-md-7
+			.bs4-col-md-7
 				p Trong số các loại kem dưỡng kiềm dầu đang được yêu thích nhất trong giới làm đẹp thì không thể bỏ qua Oil Control Mattifier của Murad. Công thức Oil Control Complex độc quyền giúp da khô thoáng liên tục 8 giờ. Làm được điều đó là bởi chiết xuất từ dầu Argan, cọ lùn và hạt mè có công dụng  ức chế sự hoạt động của enzyme Reductase. Từ đó bình thường hoá quá trình bài tiết bã nhờn và tạo nên bề mặt da khô ráo trong nhiều giờ liền.
 					br
 					|Không những vậy,  còn có SPF 15 và PA++. Vừa là kem dưỡng kiềm dầu vừa là kem chống nắng, bạn sẽ không e ngại việc dưỡng da quá nhiều bước với Oil Control Mattifier. 
-		.row
-			.col
+		.bs4-row
+			.bs4-col
 				.boximg
 					img(src="./img/home/heading_3.png", alt="")
-		.row
-			.col-md-5
+		.bs4-row
+			.bs4-col-md-5
 				figure
 					hr
 					.boximg
 						img(src="./img/home/picture-2.png", alt="")
 					figcaption
 						p Lối sống sinh hoạt và chế độ dinh dưỡng không những ảnh hưởng đến làn da mà còn quyết định chất lượng sức khỏe của mỗi người. Những loại mỹ phẩm bôi thoa có thể điều trị tại chỗ, nhưng không thể chữa dứt điểm nếu lối sống hay chế độ ăn uống không hợp khoa học. Hãy ngủ sớm hơn, tránh xa rượu bia, nước ngọt hay trà sữa và chăm chỉ rèn luyện thể chất. Bên cạnh đó, hãy ăn các thực phẩm giàu chất xơ và tươi mát, tránh các loại đồ ăn chiên xào nướng và các trái cây quá nóng như nhãn, sầu riêng…
-			.col-md-7
+			.bs4-col-md-7
 				.boximg
 					img(src="./img/home/picture-3.jpg", alt="")
-		.row
-			.col
+		.bs4-row
+			.bs4-col
 				.boximg
 					img(src="./img/home/heading_4.png", alt="")
-		.row
-			.col
+		.bs4-row
+			.bs4-col
 				hr
 				h2 Góp ý sản phẩm từ chuyên gia
-			.col-sm-6.col-md-4
+			.bs4-col-sm-6.bs4-col-md-4
 				figure
 					.boximg
 						img(src="./img/home/item_4.jpg", alt="")
@@ -91,7 +91,7 @@ section.home
 							span Nhập mã: 
 							span MUN4H
 						a(href="") Mua ngay
-			.col-sm-6.col-md-4
+			.bs4-col-sm-6.bs4-col-md-4
 				figure
 					.boximg
 						img(src="./img/home/item_4.jpg", alt="")
@@ -105,7 +105,7 @@ section.home
 							span Nhập mã: 
 							span MUN4H
 						a(href="") Mua ngay
-			.col-sm-6.col-md-4
+			.bs4-col-sm-6.bs4-col-md-4
 				figure
 					.boximg
 						img(src="./img/home/item_4.jpg", alt="")
