--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -1,4 +1,4 @@
-.home
+.mun-e-magazine
 	margin-top: -150px
 	@media (max-width: 767.98px)
 		margin-top: -100px
@@ -12,10 +12,10 @@
 	p
 		text-align: justify
 		font-size: 14px
-	.container
-		.row
+	.bs4-container
+		.bs4-row
 			&:nth-child(1)
-				.col-md-5
+				.bs4-col-md-5
 					hr
 						height: 10px
 						width: 40%
@@ -25,7 +25,7 @@
 						border: none
 					p
 						padding-right: 40px
-				.col-md-7
+				.bs4-col-md-7
 					.boximg
 						margin-top: -50px
 					@media (max-width: 991.98px)
@@ -39,7 +39,7 @@
 								width: 60%
 				@media (max-width: 767.98px)
 					flex-direction: column-reverse
-					.col-md-5
+					.bs4-col-md-5
 						margin-top: 40px
 						text-align: center
 						hr
@@ -50,7 +50,7 @@
 						@media (max-width: 565.98px)
 							margin-top: 15px
 			&:nth-child(2)
-				.col-md-8
+				.bs4-col-md-8
 					margin-top: 20px
 					p
 						padding-right: 30px
@@ -58,7 +58,7 @@
 							padding-right: 0
 					.boximg
 						padding-top: 20px
-				.col-md-4
+				.bs4-col-md-4
 					.boximg
 						margin-top: -100px
 						img
@@ -75,7 +75,7 @@
 						.boximg
 							margin-top: 0
 			&:nth-child(3)
-				.col-md-5
+				.bs4-col-md-5
 					.boximg
 						img
 							height: 450px
@@ -90,7 +90,7 @@
 						justify-content: center
 						.boximg
 							margin: 20px 0
-				.col-md-7
+				.bs4-col-md-7
 					display: inline-flex
 					align-items: center
 					p
@@ -102,7 +102,7 @@
 						p
 							padding-left: 0
 			&:nth-child(4)
-				.col-md-8
+				.bs4-col-md-8
 					margin-top: 40px
 					h3
 						font-weight: bold
@@ -116,7 +116,7 @@
 							margin: 0
 							text-align: center
 							margin-bottom: 20px
-				.col-md-4
+				.bs4-col-md-4
 					.boximg
 						height: 100%
 						align-items: flex-end
@@ -129,7 +129,7 @@
 				margin-top: 80px
 				align-items: center
 				display: flex
-				.col-md-8
+				.bs4-col-md-8
 					figure
 						.boximg
 							padding-left: 5%
@@ -150,7 +150,7 @@
 								padding: 0
 							figcaption
 								padding-right: 0
-				.col-md-4
+				.bs4-col-md-4
 					.boximg
 						img
 							height: 450px
@@ -172,7 +172,7 @@
 					margin-top: -40px
 				@media (max-width: 767.98px)
 					margin-top: 0
-				.col-md-5
+				.bs4-col-md-5
 					.boximg
 						img
 							height: 450px
@@ -187,7 +187,7 @@
 							display: flex
 							justify-content: center
 							margin: 20px 0
-				.col-md-7
+				.bs4-col-md-7
 					p
 						padding-left: 20px
 						@media (max-width: 767.98px)
@@ -209,7 +209,7 @@
 							img
 								width: 60%
 			&:nth-child(8)
-				.col-md-5
+				.bs4-col-md-5
 					figure
 						margin-right: -50px
 						margin-top: -100px
@@ -235,13 +235,13 @@
 								display: inline-block
 							.boximg
 								margin: 20px 0
-				.col-md-7
+				.bs4-col-md-7
 					.boximg
 						margin: 20px 0
 			&:nth-child(9)
 				padding: 20px 0
 			&:nth-child(10)
-				.col
+				.bs4-col
 					margin-top: 60px
 					text-align: center
 					hr
@@ -258,7 +258,8 @@
 						font-size: 26px
 						@media (max-width: 575.98px)
 							font-size: 20px
-				.col-sm-6.col-md-4
+			&:nth-child(11)
+				.bs4-col-sm-6.bs4-col-md-4
 					margin-top: 40px
 					display: flex
 					justify-content: center
