--- a/DongGia-master/src/components/product/list.pug
+++ b/DongGia-master/src/components/product/list.pug
@@ -1,5 +1,5 @@
 .product-nav
-	.container
+	.bs4-container
 		.product-category
 			nav.category
 				.nav-item
@@ -77,10 +77,10 @@
 							a.ajaxlink(href="#") A-&gt;Z
 							a.ajaxlink(href="#") Price
 .product-wrapper
-	.container
+	.bs4-container
 		.ajaxresponse
 			h2.title Kitchen & Dining
-			.row.ajaxresponsewrap
+			.bs4-row.ajaxresponsewrap
 				- for(i=1;i<16;i++)
 					figure.product-item
 						.imgbox
