--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -55,42 +55,42 @@ img
 	margin-bottom: 32px
 
 // grid css
-.col, [class^="col-"]
+.bs4-col, [class^="bs4-col-"]
 	padding: 0 10px
 	flex: 0 0 100%
 	max-width: 100%
 @media (min-width: 576px)
-	.col-sm-6
+	.bs4-col-sm-6
 		flex: 0 0 50%
 		max-width: 50%
 @media (min-width: 768px)
-	.col-md-4
+	.bs4-col-md-4
 		flex: 0 0 33.3333%
 		max-width: 33.3333%
-	.col-md-8
+	.bs4-col-md-8
 		flex: 0 0 66.6666%
 		max-width: 66.6666%
-	.col-md-5
+	.bs4-col-md-5
 		flex: 0 0 40%
 		max-width: 40%
-	.col-md-7
+	.bs4-col-md-7
 		flex: 0 0 60%
 		max-width: 60%
-	.col-md-6
+	.bs4-col-md-6
 		flex: 0 0 50%
 		max-width: 50%
 @media (min-width: 992px)
-	.col-lg
+	.bs4-col-lg
 		flex-grow: 1
 		flex-basis: 0
 		max-width: 100%
-	.col-lg-2
+	.bs4-col-lg-2
 		flex: 0 0 16.6666%
 		max-width: 16.6666%
-	.col-lg-3
+	.bs4-col-lg-3
 		flex: 0 0 25%
 		max-width: 25%
-	.col-lg-4
+	.bs4-col-lg-4
 		flex: 0 0 33.3333%
 		max-width: 33.3333%
 @media (min-width: 1200px)
