--- a/DongGia-master/src/components/_header/index.pug
+++ b/DongGia-master/src/components/_header/index.pug
@@ -1,6 +1,6 @@
 header
-	.container
-		.row.no-gutters
+	.bs4-container
+		.bs4-row.no-gutters
 			.logo
 				a(href="/")
 					img(src="./img/logo.png", alt="")
