--- a/DongGia-master/src/components/product/detail.pug
+++ b/DongGia-master/src/components/product/detail.pug
@@ -1,6 +1,6 @@
 .product-wrapper
-	.container
-		.row
+	.bs4-container
+		.bs4-row
 			.product-image
 				.big
 					.slide(data-id="sl-1" style="display:block")
@@ -27,19 +27,19 @@
 							img(src="./img/product/p_5.png", alt="")
 			.product-info
 				h1.title Half-moon Tea Set
-				.row.no-gutters.info-wrapper
+				.bs4-row.no-gutters.info-wrapper
 					.td
 						h2.subTitle Tea & Coffee Set
 					.td
 						span Code: 
 						span.code TPDL0014SET
-				.row.no-gutters.price-wrapper
+				.bs4-row.no-gutters.price-wrapper
 					.td
 						span.price 880.000 vnđ
 					.td
 						span x 
 						span.quantity Out of Stock
-				.row.no-gutters.quantity-wrapper
+				.bs4-row.no-gutters.quantity-wrapper
 					span Quantity
 					.quantity-count
 						span -
@@ -47,7 +47,7 @@
 						span +
 					.addcart
 						span Add to cart
-				.row.no-gutters.product-tab
+				.bs4-row.no-gutters.product-tab
 					.td
 						nav
 							a.active(href="#ptab-1") Product Info
@@ -79,10 +79,10 @@
 							p tab 2
 						.pcontent#ptab-3
 							p tab 3
-		.row.product-other.no-gutters
-			.col
+		.bs4-row.product-other.no-gutters
+			.bs4-col
 				h2.title You may also like...
-			.col
+			.bs4-col
 				.swiper-container
 					.swiper-wrapper
 						- for(i=1;i<6;i++)
