--- a/DongGia-master/src/pages/_layout.pug
+++ b/DongGia-master/src/pages/_layout.pug
@@ -7,8 +7,8 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 		link(href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i,700,700i" rel="stylesheet")
-		link(rel="stylesheet", href="./css/global.min.css")
-		link(rel="stylesheet", href="./css/main.min.css")
+		link(rel="stylesheet", href="./css/mun-e-magazine.global.css")
+		link(rel="stylesheet", href="./css/mun-e-magazine.main.css")
 		title #{title}
 
 	body(class=bodyClass)
