--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -194,7 +194,7 @@
 							padding-left: 0
 			&:nth-child(7)
 				margin: 40px 0
-				.col
+				.bs4-col
 					.boximg
 						display: flex
 						justify-content: flex-end
@@ -221,6 +221,7 @@
 							display: inline-block
 							border: none
 						.boximg
+							justify-content: flex-end
 							img
 								width: 100%
 						figcaption
