--- a/DongGia-master/src/components/gallery/index.sass
+++ b/DongGia-master/src/components/gallery/index.sass
@@ -53,8 +53,11 @@
 					text-decoration: none
 					&:hover, &.active
 						box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
-						border-radius: 0 5px 5px 0
 						background-color: #e1e1e1
+					&:nth-child(1)
+						border-radius: 0 5px 5px 0
+					&:nth-child(2)
+						border-radius: 5px 0 0 5px
 				@media (min-width: 768px)
 					a
 						width: 275px
