--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -97,11 +97,11 @@
 		@media (min-width: 768px)
 			.btn-group
 				.swiper-button-next
-					transform: translate(-27%,50%)
+					transform: translate(0%,-150%)
 					outline: none
 					right: 0
 					bottom: auto
-					top: 18%
+					top: 0
 					left: auto
 					background-image: none
 					background: #ffffff
@@ -110,12 +110,12 @@
 						&:before
 							color: #000
 				.swiper-button-prev
-					transform: translate(-27%,50%)
+					transform: translate(0%,-150%)
 					outline: none
 					left: auto
 					background-image: none
 					bottom: auto
-					top: 18%
+					top: 0
 					right: 6%
 					background: #ffffff
 					border-color: rgba(19, 28, 35, 0.1)
@@ -130,12 +130,6 @@
 			.btn-group
 				.swiper-button-prev
 					right: 4%
-		@media (min-width: 1440px)
-			.btn-group
-				.swiper-button-prev
-					top: 17%
-				.swiper-button-next
-					top: 17%
 		h2
 			padding-bottom: 35px
 		nav
@@ -167,6 +161,10 @@
 					box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
 					border-radius: 0 5px 5px 0
 					background-color: #e1e1e1
+				&:nth-child(1)
+						border-radius: 0 5px 5px 0
+				&:nth-child(2)
+					border-radius: 5px 0 0 5px
 			@media (min-width: 768px)
 				a
 					width: 270px
@@ -175,8 +173,19 @@
 			width: 100%
 			figure
 				position: relative
-				img
-					width: 100%
+				&:hover
+					.boximg
+						img
+							transform: scale(1.2)
+							transition: 1s all ease-in-out
+				.boximg
+					overflow: hidden
+					img
+						width: 100%
+						transition: 1s all ease-in-out
+						height: 250px
+						@media (max-width: 767.98px)
+							height: 200px
 				figcaption
 					text-align: left
 					p
@@ -295,8 +304,14 @@
 							figure
 								position: relative
 								margin: 15px
+								overflow: hidden
+								&:hover
+									img
+										transform: scale(1.2)
+										transition: 1s all ease-in-out
 								img
 									width: 100%
+									transition: 1s all ease-in-out
 								figcaption
 									position: absolute
 									bottom: 0
@@ -325,6 +340,16 @@
 												content: "\f0da"
 												font-family: "Font Awesome 5 Free"
 												font-weight: 600
+						.col-6
+							img
+								height: 250px
+								@media (max-width: 767.98px)
+									height: 200px
+						.col-4
+							img
+								height: 276px
+								@media (max-width: 767.98px)
+									height: 226px
 		
 			@media (min-width: 512px)
 				.swiper-wrapper
