--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -29,10 +29,10 @@
 				&:hover, &.active
 					box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
 					background-color: #e1e1e1
-				a:nth-child(1)
-						border-radius: 5px 0 0 5px
-				a:nth-child(2)
+				&:nth-child(1)
 						border-radius: 0 5px 5px 0
+				&:nth-child(2)
+					border-radius: 5px 0 0 5px
 			@media (min-width: 768px)
 				a
 					width: 270px
