--- a/DongGia-master/src/components/employ/detail.pug
+++ b/DongGia-master/src/components/employ/detail.pug
@@ -8,23 +8,23 @@ section.jobs
 					ul
 						li
 							p
-								span.mdi.mdi-account-circle
-								span Nơi làm việc: Hồ Chí Minh 
+								i.material-icons person_pin_circle
+								span Nơi làm việc: Hồ Chí Minh
 							p
-								span.mdi.mdi-star-circle
+								i.mdi-star-circle
 								span Cấp bậc: Nhân viên
 							p
-								span.mdi.mdi-school
+								i.mdi-school
 								span Trình độ: Cao đẳng
 						li
 							p
-								span.mdi.mdi-briefcase
+								i.material-icons work
 								span Kinh nghiệm: 1 - 2 Năm
 							p
-								span.mdi
+								i.salary
 								span Lương: ~ 15.000.000 VND
 							p
-								span
+								i.mdi-camera-timer
 								span Hết hạn nộp: 29/01/2019
 			.col-6
 				.detail
