--- a/DongGia-master/src/components/employ/index.sass
+++ b/DongGia-master/src/components/employ/index.sass
@@ -288,6 +288,46 @@
 						font-weight: 400
 						line-height: 30px
 						padding: .2rem 0
+						display: flex
+						align-items: center
+						i
+							font-size: 20px
+							padding-right: 5px
+							font-style: normal
+						.mdi-star-circle
+							font-family: "Material Design Icons"
+							font-weight: 400
+							content: "\f4cf"
+						.mdi-school
+							font-family: "Material Design Icons"
+							font-weight: 400
+							content: "\f474"
+						.mdi-camera-timer
+							display: inline-block
+							font-family: "Material Design Icons"
+							font-size: inherit
+							text-rendering: auto
+							line-height: 1
+							-webkit-font-smoothing: antialiased
+							-moz-osx-font-smoothing: grayscale
+							content: "\f109"
+						.salary
+							display: flex
+							&:before
+								content: "\f155"
+								font-family: "Font Awesome 5 Free"
+								font-weight: 600
+								display: inline-flex
+								width: 18px
+								height: 18px
+								margin-right: 2px
+								font-size: 10px
+								text-align: center
+								border-radius: 100%
+								color: #fff
+								background: #000
+								justify-content: center
+								align-items: center
 		@media (min-width: 512px)
 			ul
 				display: flex
