--- a/DongGia-master/src/components/main.sass
+++ b/DongGia-master/src/components/main.sass
@@ -14,10 +14,11 @@
 @import "home_banner/index.sass"
 @import "banner/index.sass"
 @import "about/index.sass"
+@import "_core/mixins.sass"
 
-=line($line)
-	overflow: hidden
-	display: -webkit-box
-	text-overflow: ellipsis
-	-webkit-line-clamp: $line
-	-webkit-box-orient: vertical
+// =line($line)
+// 	overflow: hidden
+// 	display: -webkit-box
+// 	text-overflow: ellipsis
+// 	-webkit-line-clamp: $line
+// 	-webkit-box-orient: vertical
