--- a/DongGia-master/src/components/project/index.sass
+++ b/DongGia-master/src/components/project/index.sass
@@ -121,9 +121,11 @@
 		.box-img
 			position: relative
 			img
-				padding-top: 20px
+				margin-top: 20px
 				border-top-right-radius: 25px
 				border-bottom-left-radius: 15px
+				width: 100%
+				height: 330px
 			&:before
 				content: ""
 				display: inline-block
@@ -205,9 +207,17 @@
 		figure
 			position: relative
 			margin: 0 20px
-			img
-				filter: brightness(.5)
-				transition: .5s all ease-in-out
+			.boximg
+				img
+					filter: brightness(.5)
+					transition: .5s all ease-in-out
+					height: 600px
+					@media (max-width: 991.98px)
+						height: 500px
+					@media (max-width: 767.98px)
+						height: 400px
+					@media (max-width: 575.98px)
+						height: 300px
 			figcaption
 				position: absolute
 				top: 50%
@@ -250,22 +260,32 @@
 	padding-bottom: 35px
 	h2.moduleTitle
 		padding-bottom: 25px
-	.col
-		img
-			padding: 15px 5px
-			width: 100%
-			filter: grayscale(1)
-			transition: .5s all ease-in-out
-			&:hover
-				filter: grayscale(0)
+	.item
+		flex: 0 0 100%
+		max-width: 100%
+		padding-left: 15px
+		padding-right: 15px
+		margin-bottom: 30px
+		a
+			img
+				width: 100%
+				filter: grayscale(1)
 				transition: .5s all ease-in-out
+				height: 250px
+				@media (max-width: 991.98px)
+					height: 200px
+				@media (max-width: 767.98px)
+					height: 250px
+				&:hover
+					filter: grayscale(0)
+					transition: .5s all ease-in-out
 	@media (min-width: 512px)
 		display: flex
-		.col
+		.item
 			flex: 0 0 50%
 			max-width: 50%
 	@media (min-width: 768px)
-		.col
+		.item
 			flex: 0 0 33.3333%
 			max-width: 33.3333%
 .other-project
