--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -171,32 +171,37 @@
 		.box-content
 			text-align: center
 			width: 100%
-			figure
-				position: relative
-				&:hover
+			a
+				figure
+					position: relative
+					&:hover
+						.boximg
+							img
+								transform: scale(1.2)
+								transition: 1s all ease-in-out
 					.boximg
+						overflow: hidden
 						img
-							transform: scale(1.2)
+							width: 100%
 							transition: 1s all ease-in-out
-				.boximg
-					overflow: hidden
-					img
-						width: 100%
-						transition: 1s all ease-in-out
-						height: 250px
-						@media (max-width: 767.98px)
-							height: 200px
-				figcaption
-					text-align: left
-					p
-						color: #404040
-						font-family: 'Montserrat', sans-serif
-						font-size: 14px
-						font-weight: 400
-						line-height: 22px
-						display: inline-block
-						padding-top: 15px !important
-						padding-bottom: 25px !important
+							height: 250px
+							@media (max-width: 767.98px)
+								height: 200px
+					figcaption
+						text-align: left
+						p
+							color: #404040
+							font-family: 'Montserrat', sans-serif
+							font-size: 14px
+							font-weight: 400
+							line-height: 22px
+							margin-top: 15px
+							margin-bottom: 25px
+							overflow: hidden
+							display: -webkit-box
+							text-overflow: ellipsis
+							-webkit-line-clamp: 2
+							-webkit-box-orient: vertical
 	@media (min-width: 512px)
 		padding-bottom: 30px
 .popular-project
