--- a/DongGia-master/src/components/employ/detail.pug
+++ b/DongGia-master/src/components/employ/detail.pug
@@ -8,37 +8,49 @@ section.jobs
 					ul
 						li
 							p
-								i.material-icons person_pin_circle
+								i
 								span Nơi làm việc: Hồ Chí Minh
 							p
-								i.mdi-star-circle
+								i
 								span Cấp bậc: Nhân viên
 							p
-								i.mdi-school
+								i
 								span Trình độ: Cao đẳng
 						li
 							p
-								i.material-icons work
+								i
 								span Kinh nghiệm: 1 - 2 Năm
 							p
-								i.salary
+								i
 								span Lương: ~ 15.000.000 VND
 							p
-								i.mdi-camera-timer
+								i
 								span Hết hạn nộp: 29/01/2019
 			.col-6
 				.detail
 					h3 Chính sách phúc lợi
 					ul
 						li
-							p Bảo hiểm theo quy định
-							p Đào tạo nâng cao trình độ
-							p Du lịch hằng năm
+							p
+								i
+								span Bảo hiểm theo quy định
+							p
+								i
+								span Đào tạo nâng cao trình độ
+							p
+								i
+								span Du lịch hằng năm
 
 						li
-							p Tăng lương
-							p Thưởng vào các dịp lễ Tết
-							p Thưởng thành tích tốt
+							p
+								i
+								span Tăng lương
+							p
+								i
+								span Thưởng vào các dịp lễ Tết
+							p
+								i
+								span Thưởng thành tích tốt
 		.row
 			.col-12
 				h3 Mô tả công việc
@@ -65,7 +77,8 @@ section.jobs
 					li Độ tuổi: 22 - 28
 					li Giới tính: Nữ
 					li Hình thức: Nhân viên chính thức
-				a(href="") Ứng tuyển
+				.sign-in-button
+					a(href="") Ứng tuyển
 section.other
 	.container
 		h3 Vị trí khác
@@ -75,30 +88,54 @@ section.other
 					.detail
 						h3 Thư ký Giám đốc
 						.box-content
-							.location Nơi làm việc: Hồ Chí Minh
-							.education Trình độ: Cao đẳng
-							.salary Lương: ~10.000.000 VND
+							p
+								i
+								span Nơi làm việc: Hồ Chí Minh
+							p
+								i
+								span Trình độ: Cao đẳng
+							p
+								i
+								span Lương: ~10.000.000 VND
 				a(href="").swiper-slide
 					.detail
 						h3 Thư ký Giám đốc
 						.box-content
-							.location Nơi làm việc: Hồ Chí Minh
-							.education Trình độ: Cao đẳng
-							.salary Lương: ~10.000.000 VND
+							p
+								i
+								span Nơi làm việc: Hồ Chí Minh
+							p
+								i
+								span Trình độ: Cao đẳng
+							p
+								i
+								span Lương: ~10.000.000 VND
 				a(href="").swiper-slide
 					.detail
 						h3 Thông tin khác
 						.box-content
-							.location Nơi làm việc: Hồ Chí Minh
-							.education Trình độ: Cao đẳng
-							.salary Lương: ~10.000.000 VND
+							p
+								i
+								span Nơi làm việc: Hồ Chí Minh
+							p
+								i
+								span Trình độ: Cao đẳng
+							p
+								i
+								span Lương: ~10.000.000 VND
 				a(href="").swiper-slide
 					.detail
 						h3 Thông tin khác
 						.box-content
-							.location Nơi làm việc: Hồ Chí Minh
-							.education Trình độ: Cao đẳng
-							.salary Lương: ~10.000.000 VND
+							p
+								i
+								span Nơi làm việc: Hồ Chí Minh
+							p
+								i
+								span Trình độ: Cao đẳng
+							p
+								i
+								span Lương: ~10.000.000 VND
 		.swiper-button-next
 			i.fa-chevron-right
 		.swiper-button-prev
