--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -328,6 +328,10 @@
 										position: relative
 										border-bottom: 1px solid rgb(225, 225, 225)
 										margin-bottom: 20px
+										display: -webkit-box
+										text-overflow: ellipsis
+										-webkit-line-clamp: 1
+										-webkit-box-orient: vertical
 										span
 											font-size: 12px
 											font-family: 'Montserrat', sans-serif
