--- a/DongGia-master/src/components/support/index.sass
+++ b/DongGia-master/src/components/support/index.sass
@@ -2,7 +2,9 @@
 	padding-bottom: 60px
 	.module-faqs
 		background-color: #f5f5f5
-		margin: 1rem
+		padding: 60px 95px 60px 65px
+		@media (max-width: 767.98px)
+			padding: 1rem
 		h3
 			font-size: 16px
 			font-family: 'Montserrat', sans-serif
@@ -93,6 +95,3 @@
 						text-align: left
 						@media (max-width: 767.98px)
 							text-align: justify
-	@media (min-width: 992px)
-		.module-faqs
-			margin: 60px 95px 60px 65px
